--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -66,6 +66,7 @@
     		</div><!-- /.navbar-collapse -->
     		</div>
   		</div><!-- /.container-fluid -->
+  		<h3>asdfasdfs</h3>
 	</nav>
 </header>
 
