[NEW_BRANCH] Updated

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -66,7 +66,7 @@
     		</div><!-- /.navbar-collapse -->
     		</div>
   		</div><!-- /.container-fluid -->
-  		<h3>Hello world!</h3>
+  		<h3>Hello world! world!</h3>
 	</nav>
 </header>
 
